fixed focus on mobile navigation outline

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -36,6 +36,13 @@
     &:first-child {
       margin: 0 0 20px 0;
     }
+    &:focus,
+    &:hover {
+      border: 0;
+      color: transparent;
+      outline-offset: 0;
+      outline: 0;
+    }
   }
 
   /* Hamburger menu */
